# BigInt

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  bigInt.cpp  bigInt.h  main.cpp  utils.h
src/bigint/: bigInt.h  utils.h
test/: CMakeLists.txt  data_loader.h  test_bigint.cpp  testdata_generator.py  utils_for_test.h  values_for_test.h
